# AI-Powered-Campus-Knowledge-Assistant

./: .env.example  .gitignore  README.md  push_to_github.sh  pyproject.toml  requirements.txt
data/eval/: qa_gold.json
data/synthetic/: README.md
scripts/: build_index.py  evaluate.py  ingest_all.py  run_assistant.py  run_web_app.sh
src/campus_assistant/: config.py  data_models.py
src/campus_assistant/app/: cli.py
src/campus_assistant/db/: __init__.py  multi_db.py
src/campus_assistant/evaluation/: benchmark.py  metrics.py
src/campus_assistant/ingestion/: calendar_ingestor.py  class_schedule_ingestor.py  events_ingestor.py  normalizer.py  pipeline.py
src/campus_assistant/llm/: __init__.py  domain_assistant.py
src/campus_assistant/nlp/: entity_extractor.py  intent.py  query_normalizer.py
src/campus_assistant/retrieval/: rag_pipeline.py  vector_index.py
src/campus_assistant/utils/: io.py
src/campus_assistant/web/: __init__.py  server.py
src/campus_assistant/web/static/css/: studio.css  styles.css
src/campus_assistant/web/static/js/: app.js  studio.js  studio_login.js
src/campus_assistant/web/templates/: index.html  studio.html  studio_login.html
tests/: test_class_schedule_fallback.py  test_entity_extractor.py  test_intent_classifier.py  test_manual_ingestion_payload.py  test_multi_db_class_query.py  test_query_normalizer.py
